ingress-nextcloud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
# namespace:
spec:
  ingressClassName: traefik
  rules:
    - host: msp-nc.schwoepcloud.de
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
  tls:
    - hosts:
        - msp-nc.schwoepcloud.de
      secretName: nextcloud-tls
